creating custom validators

--- a/src/app/events/event-details/create-session.component.html
+++ b/src/app/events/event-details/create-session.component.html
@@ -66,8 +66,14 @@
         >Required</em
       >
       <em
-        *ngIf="abstract.invalid && abstract.dirty && abstract?.errors.maxlength"
+        *ngIf="abstract.invalid && abstract.dirty && abstract?.errors.maxLength"
         >Cannot exceed 400 characters</em
+      >
+      <em
+        *ngIf="
+          abstract.invalid && abstract.dirty && abstract?.errors.restrictedWords
+        "
+        >Restricted Word found: {{ abstract.errors.restrictedWords }}</em
       >
       <textarea
         formControlName="abstract"
