--- a/src/app/events/event-details/event-details.component.html
+++ b/src/app/events/event-details/event-details.component.html
@@ -22,36 +22,36 @@
     </div>
   </div>
   <hr />
-  <div class="row" style="margin-bottom:100px">
+  <div class="row" style="margin-bottom:10px">
     <div class="col-md-2">
       <h3 style="margin:0">Session</h3>
     </div>
     <div class="col-md-7">
       <button
         class="btn btn-default"
-        [class.active]="ilterBY === 'all'"
-        (click)="(filterBY === 'all')"
+        [class.active]="filterBy === 'all'"
+        (click)="filterBy = 'all'"
       >
         All
       </button>
       <button
         class="btn btn-default"
-        [class.active]="filterBY === 'beginner'"
-        (click)="(filterBY === 'beginner')"
+        [class.active]="filterBy === 'beginner'"
+        (click)="filterBy = 'beginner'"
       >
         Beginner
       </button>
       <button
         class="btn btn-default"
-        [class.active]="filterBY === 'intermediate'"
-        (click)="(filterBY === 'intermediate')"
+        [class.active]="filterBy === 'intermediate'"
+        (click)="filterBy = 'intermediate'"
       >
         Intermediate
       </button>
       <button
         class="btn btn-default"
-        [class.active]="filterBY === 'advanced'"
-        (click)="(filterBY === 'advanced')"
+        [class.active]="filterBy === 'advanced'"
+        (click)="filterBy = 'advanced'"
       >
         Adavanced
       </button>
@@ -60,7 +60,11 @@
       <a (click)="addSession()">Add Session</a>
     </div>
   </div>
-  <session-list *ngIf="!addMode" [sessions]="event?.sessions"></session-list>
+  <session-list
+    [filterBy]="filterBy"
+    *ngIf="!addMode"
+    [sessions]="event?.sessions"
+  ></session-list>
   <create-session
     *ngIf="addMode"
     (saveNewSession)="saveNewSession($event)"
